<resources>
    <string name="app_name">Mobile-finalproject</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="nuvent_content_desc">NUvent</string>
    <string name="select_who_you_are">Select who you are</string>
    <string name="host">HOST</string>
    <string name="user">USER</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="register">Register</string>
    <string name="enter_your_host_name">Enter your Host Name</string>
    <string name="register_as_a_host">Register as a Host</string>
    <string name="enter_your_neu_email_address">Enter your NEU Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="NUvent">string</string>
    <string name="NUvent2">NUvent</string>
    <string name="event_name_text">Event Name :</string>
    <string name="enter_event_name_value">Enter Event Name</string>
    <string name="upload_event_poster_text">Upload Event Poster</string>
    <string name="enter_event_address_value">Enter Event Address</string>
    <string name="event_address_text">Event Address :</string>
    <string name="event_description">Event Description :</string>
    <string name="enter_event_description_value">Enter Event Description</string>
    <string name="start_date_text">Start Date :</string>
    <string name="enter_start_date_value">Enter Start Date</string>
    <string name="end_date_text">End Date :</string>
    <string name="enter_end_date_value">Enter End Date</string>
    <string name="enter_price_per_ticket_value">Enter Price per Ticket</string>
    <string name="event_ticket_cost_text">Event Ticket Cost :</string>
    <string name="event_max_capacity_text">Event Max capacity :</string>
    <string name="enter_maximum_event_capacity_value">Enter Max Capacity</string>
    <string name="event_min_age_text">Event Min Age :</string>
    <string name="event_max_age_text">Event Max Age :</string>
    <string name="add_event_button_host">Add Event</string>
    <string name="submit_edit_text">Submit Edit</string>
    <string name="register_new_userorhost_fp">REGISTER</string>
    <string name="please_register_text_sb">Please register</string>
    <string name="email_not_found_text_sb">Email not found</string>
    <string name="i_am_a_host_or_user_text">I am a</string>
    <string name="maximum_age_for_entry_value">Maximum Age for Entry</string>
    <string name="minimum_age_for_entry_value">Minimum Age for Entry</string>
    <string name="logout">LOGOUT</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="manage_events">MANAGE EVENTS</string>
    <string name="update_profile_picture">Select Profile Picture</string>
    <string name="name">Name</string>
    <string name="small_arrow"><![CDATA[>]]></string>
    <string name="email_text">Email</string>
    <string name="update_password">Update Password</string>
    <string name="password_text">Password</string>
    <string name="account_text">Account</string>
    <string name="close_your_account">Close your Account</string>
    <string name="first_last_text">First Last</string>
    <string name="update_name">Update NAME</string>
    <string name="enter_your_name_text">Enter your Name</string>
    <string name="update_password_text">Update Password</string>
    <string name="current_password_text">Current Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_new_password_text">Confirm New Password</string>
    <string name="deactivate_account_text">Deactivate Account</string>
    <string name="deactivate_text">DELETE</string>
    <string name="type_deactivate_text">Type DELETE</string>
    <string name="type_deactivate_to_delete_your_account_text">Type \'DELETE\' to Delete your Account:</string>
    <string name="registered_users">Registered Users</string>
    <string name="edit">Edit</string>
    <string name="event_min_age">Event Min Age :</string>
    <string name="event_max_capacity">Event Max capacity :</string>
    <string name="event_max_age">Event Max Age :</string>
    <string name="event_ticket_cost">Event Ticket Cost :</string>
    <string name="end_date">End Date :</string>
    <string name="start_date">Start Date :</string>
    <string name="event_description_text">Event Description :</string>
    <string name="event_address">Event Address :</string>
    <string name="event_name">Event Name :</string>
    <string name="enter_your_password_to_delete_your_account">Enter your Password to Delete your Account</string>
</resources>