<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <ImageView
        android:id="@+id/imageView_event_poster"
        android:layout_width="370dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/poster_round"
        app:layout_constraintBottom_toTopOf="@+id/textView_upload_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:srcCompat="@mipmap/poster_round" />

    <Button
        android:id="@+id/textView_upload_image_text"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#d41b2b "
        android:text="Upload Poster"
        app:layout_constraintBottom_toTopOf="@+id/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_event_poster"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_name_text"
        app:layout_constraintBottom_toTopOf="@+id/event_address"
        app:layout_constraintEnd_toStartOf="@+id/event_name1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_upload_image_text" />

    <TextView
        android:id="@+id/event_address"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_address_text"
        app:layout_constraintBottom_toTopOf="@+id/event_description"
        app:layout_constraintEnd_toStartOf="@+id/event_address1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name" />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_description"
        app:layout_constraintBottom_toTopOf="@+id/event_start"
        app:layout_constraintEnd_toStartOf="@+id/event_description1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_address" />

    <TextView
        android:id="@+id/event_start"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/start_date_text"
        app:layout_constraintBottom_toTopOf="@+id/event_end"
        app:layout_constraintEnd_toStartOf="@+id/event_start1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description" />

    <TextView
        android:id="@+id/event_end"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/end_date_text"
        app:layout_constraintBottom_toTopOf="@+id/event_cost"
        app:layout_constraintEnd_toStartOf="@+id/event_end1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_start" />

    <TextView
        android:id="@+id/event_cost"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_ticket_cost_text"
        app:layout_constraintBottom_toTopOf="@+id/event_capacity"
        app:layout_constraintEnd_toStartOf="@+id/event_cost1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_end" />

    <TextView
        android:id="@+id/event_capacity"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_max_capacity_text"
        app:layout_constraintBottom_toTopOf="@+id/event_min"
        app:layout_constraintEnd_toStartOf="@+id/event_capacity1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_cost" />

    <TextView
        android:id="@+id/event_min"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_min_age_text"
        app:layout_constraintBottom_toTopOf="@+id/event_max"
        app:layout_constraintEnd_toStartOf="@+id/event_min1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_capacity" />

    <TextView
        android:id="@+id/event_max"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/event_max_age_text"
        app:layout_constraintBottom_toTopOf="@+id/add_event_button"
        app:layout_constraintEnd_toStartOf="@+id/event_max1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_min" />

    <EditText
        android:id="@+id/event_name1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/enter_event_name_value"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/event_address1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_upload_image_text" />

    <EditText
        android:id="@+id/event_address1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_event_address_value"
        app:layout_constraintBottom_toTopOf="@+id/event_description1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_address"
        app:layout_constraintTop_toBottomOf="@+id/event_name1" />

    <EditText
        android:id="@+id/event_description1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_event_description_value"
        app:layout_constraintBottom_toTopOf="@+id/event_start1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_description"
        app:layout_constraintTop_toBottomOf="@+id/event_address1" />

    <EditText
        android:id="@+id/event_start1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="date"
        android:hint="DD/MM/YYYY"
        app:layout_constraintBottom_toTopOf="@+id/event_end1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_start"
        app:layout_constraintTop_toBottomOf="@+id/event_description1" />

    <EditText
        android:id="@+id/event_end1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="date"
        android:hint="DD/MM/YYYY"
        app:layout_constraintBottom_toTopOf="@+id/event_cost1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/event_end"
        app:layout_constraintTop_toBottomOf="@+id/event_start1" />

    <EditText
        android:id="@+id/event_cost1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_price_per_ticket_value"
        app:layout_constraintBottom_toTopOf="@+id/event_capacity1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_cost"
        app:layout_constraintTop_toBottomOf="@+id/event_end1" />

    <EditText
        android:id="@+id/event_max1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/maximum_age_for_entry_value"
        app:layout_constraintBottom_toTopOf="@+id/add_event_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/event_max"
        app:layout_constraintTop_toBottomOf="@+id/event_min1" />

    <EditText
        android:id="@+id/event_min1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/minimum_age_for_entry_value"
        app:layout_constraintBottom_toTopOf="@+id/event_max1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_min"
        app:layout_constraintTop_toBottomOf="@+id/event_capacity1" />

    <EditText
        android:id="@+id/event_capacity1"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_maximum_event_capacity_value"
        app:layout_constraintBottom_toTopOf="@+id/event_min1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_capacity"
        app:layout_constraintTop_toBottomOf="@+id/event_cost1" />

    <Button
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_button_host"
        android:textColor="#ffffff"
        android:backgroundTint="#d41b2b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_max1"
        app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>