<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.AccountSettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_Update_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@mipmap/profile_foreground" />

        <Button
            android:id="@+id/textView_Update_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_profile_picture"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/LLMain"
        android:layout_width="match_parent"
        android:layout_height="379dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <!-- Name -->

        <LinearLayout
            android:id="@+id/LL1_Name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewName"
                android:text="@string/name"
                android:textStyle="bold"
                android:layout_width="120dp"
                android:textSize="17sp"
                android:layout_height="match_parent"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView_User_Name_Value"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:text="@string/first_last_text"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/arrow1_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/small_arrow"
                android:textStyle="bold"
                android:textSize="19sp"
                android:gravity="center"/>
        </LinearLayout>


        <!-- Email -->

        <LinearLayout
            android:id="@+id/LL2_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewEmail"
                android:text="@string/email_text"
                android:textStyle="bold"
                android:layout_width="120dp"
                android:textSize="17sp"
                android:layout_height="match_parent"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView_Email_Value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:text="@string/email_text"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>



        <!-- Password -->

        <LinearLayout
            android:id="@+id/LL3_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewPassword"
                android:text="@string/password_text"
                android:textStyle="bold"
                android:layout_width="120dp"
                android:textSize="17sp"
                android:layout_height="match_parent"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView_Password_Value"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:text="@string/update_password"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/arrow2_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/small_arrow"
                android:textStyle="bold"
                android:textSize="19sp"
                android:gravity="center"/>
        </LinearLayout>



        <!-- Account -->

        <LinearLayout
            android:id="@+id/LL4_Account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewAccount"
                android:text="@string/account_text"
                android:textStyle="bold"
                android:layout_width="120dp"
                android:textSize="17sp"
                android:layout_height="match_parent"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView_Close_Account_Value"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:text="@string/deactivate_account_text"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/arrow3_closeAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/small_arrow"
                android:textStyle="bold"
                android:textSize="19sp"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>